Update ParseContainerFromHeaders.java